--- a/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
+++ b/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
@@ -27,13 +27,13 @@
     <th mat-header-cell *matHeaderCellDef>Importo</th>
     <td mat-cell *matCellDef="let element">
       @if (element.amount) {
-        <p class="compensation-amount">
+        <span class="compensation-amount">
           + {{ element.amount | currency: "EUR" }}
-        </p>
+        </span>
       } @else if (element.withholdings) {
-        <p class="withholdings-amount">
+        <span class="withholdings-amount">
           - {{ element.withholdings | currency: "EUR" }}
-        </p>
+        </span>
       } @else {
         -
       }
