--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -16,7 +16,7 @@
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" routerLink=""
+      <a class="nav-link" routerLink="bonds"
         ><p i18n>side-bar.bond-simulation</p></a
       >
     </li>
