--- a/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
+++ b/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="col-2">
+  <div
+    class="col-2"
+    style="display: flex; align-items: center; justify-content: center"
+  >
     <h3>Paychecks</h3>
   </div>
   <div class="col-2">
@@ -16,5 +19,14 @@
         </mat-select>
       </mat-form-field>
     </form>
+  </div>
+  <div
+    class="col-2"
+    style="display: flex; align-items: center; justify-content: center"
+  >
+    <button mat-fab extended>
+      <mat-icon fontIcon="upload"></mat-icon>
+      Import
+    </button>
   </div>
 </div>
