--- a/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
+++ b/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
@@ -21,12 +21,22 @@
     </form>
   </div>
   <div
-    class="col-2"
+    class="col"
     style="display: flex; align-items: center; justify-content: center"
   >
-    <button mat-fab extended>
-      <mat-icon fontIcon="upload"></mat-icon>
-      Import
-    </button>
+    <div class="row">
+      <div class="col">
+        <button mat-fab extended (click)="importPaychecksFromFile()">
+          <mat-icon fontIcon="upload"></mat-icon>
+          Import
+        </button>
+      </div>
+      <div class="col">
+        <button mat-fab extended (click)="exportPaychecksToFile()">
+          <mat-icon fontIcon="download"></mat-icon>
+          Export
+        </button>
+      </div>
+    </div>
   </div>
 </div>
