--- a/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
+++ b/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
@@ -26,6 +26,12 @@
   >
     <div class="row">
       <div class="col">
+        <button mat-fab extended (click)="openPaycheckFormModal()">
+          <mat-icon fontIcon="add"></mat-icon>
+          Insert
+        </button>
+      </div>
+      <div class="col">
         <button mat-fab extended (click)="importPaychecksFromFile()">
           <mat-icon fontIcon="upload"></mat-icon>
           Import
