--- a/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
+++ b/src/app/features/paychecks/paycheck-horizontal-menu/paycheck-horizontal-menu.component.html
@@ -5,9 +5,9 @@
   >
     <h3>Paychecks</h3>
   </div>
-  <div class="col-2">
+  <div class="col">
     <form [formGroup]="formGroup" class="m-2">
-      <mat-form-field appearance="outline">
+      <mat-form-field subscriptSizing="dynamic" appearance="outline">
         <mat-label>Seleziona l'anno</mat-label>
         <mat-select
           formControlName="yearFormControl"
