--- a/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
+++ b/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
@@ -1,9 +1,4 @@
-<table
-  mat-table
-  [dataSource]="paycheckEntryList"
-  class="mat-elevation-z8"
-  multiTemplateDataRows
->
+<table mat-table [dataSource]="paycheckEntryList" multiTemplateDataRows>
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef>Description</th>
     <td mat-cell *matCellDef="let element">{{ element.description }}</td>
