--- a/src/app/features/paychecks/salary-input-form/salary-input-form.component.html
+++ b/src/app/features/paychecks/salary-input-form/salary-input-form.component.html
@@ -2,10 +2,9 @@
   <div class="row">
     <div class="col">
       <mat-form-field appearance="outline">
-        <mat-label>Inserisci retribuzione oraria</mat-label>
+        <mat-label>Inserisci retribuzione</mat-label>
         <input
           matInput
-          placeholder="88.76"
           type="number"
           min="0"
           step="0.01"
@@ -15,10 +14,9 @@
     </div>
     <div class="col">
       <mat-form-field appearance="outline">
-        <mat-label>Inserisci frequenza</mat-label>
+        <mat-label>Inserisci giorni</mat-label>
         <input
           matInput
-          placeholder="22"
           type="number"
           min="0"
           formControlName="salaryFrequencyFormControl"
