--- a/src/app/features/paychecks/other-compensations-form-section/other-compensations-form-section.component.html
+++ b/src/app/features/paychecks/other-compensations-form-section/other-compensations-form-section.component.html
@@ -6,18 +6,27 @@
   >
     <div class="row">
       <div class="col">
-        <mat-form-field appearance="outline">
-          <mat-label>Inserisci Descrizione</mat-label>
+        <mat-form-field appearance="outline" subscriptSizing="dynamic">
+          <mat-label>Inserisci Intestazione</mat-label>
           <input
             matInput
             type="text"
             formControlName="descriptionFormControl"
+            [matAutocomplete]="auto"
           />
+          <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+            @for (
+              option of filteredDescriptionOptionsObservable | async;
+              track option
+            ) {
+              <mat-option [value]="option">{{ option }}</mat-option>
+            }
+          </mat-autocomplete>
         </mat-form-field>
       </div>
       <div class="col">
-        <mat-form-field appearance="outline">
-          <mat-label>Inserisci retribuzione oraria</mat-label>
+        <mat-form-field appearance="outline" subscriptSizing="dynamic">
+          <mat-label>Inserisci retribuzione</mat-label>
           <input
             matInput
             type="number"
@@ -28,7 +37,7 @@
         </mat-form-field>
       </div>
       <div class="col">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" subscriptSizing="dynamic">
           <mat-label>Inserisci frequenza</mat-label>
           <input
             matInput
@@ -38,19 +47,19 @@
           />
         </mat-form-field>
       </div>
-      <div class="col">
+      <div class="col" style="display: flex; align-items: center">
         <mat-checkbox formControlName="isUsedInSocialContributionFormControl"
           >Imponibile INPS</mat-checkbox
         >
       </div>
-      <div class="col">
+      <div class="col" style="display: flex; align-items: center">
         <mat-checkbox formControlName="isUsedInIncomeTaxFormControl"
           >Imponibile IRPEF</mat-checkbox
         >
       </div>
-      <div class="col">
+      <div class="col" style="display: flex; align-items: center">
         <button
-          mat-fab
+          mat-mini-fab
           type="submit"
           [disabled]="!this.formGroupOtherCompensations.valid"
         >
